--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -19,13 +19,16 @@
   margin-top: 20%;
   display: flex;
   flex-direction: column;
-  font-size: 34px;
-  color: #393c41;
   align-items: center;
   flex: 1;
 }
 
-.item__description {
+.item__text h1 {
+  font-size: 34px;
+  color: #393c41;
+}
+
+.item__text p {
   font-weight: 200;
   font-size: 14px;
 }
